# kuzu_training

./: README.md  requirements.txt
data/: answer_uses_context.csv  answers.csv  chunk_mentions_topic.csv  chunks.csv  client_types.csv  context_supports_requirement.csv  context_uses_chunk.csv  controls.csv  countries.csv  doc_applies_client_type.csv  doc_applies_country.csv  doc_applies_risk.csv  doc_generates_requirement.csv  document_has_chunk.csv  policy_documents.csv  query_retrieves_context.csv  requirement_depends_on.csv  requirement_from_chunk.csv  requirement_implemented_in_system.csv  requirement_mapped_control.csv  requirements.csv  retrieval_contexts.csv  systems.csv  (+6 more)
python-agentic-knowledge-graph/: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt
python-agentic-knowledge-graph/.github/workflows/: tests.yml
python-agentic-knowledge-graph/data/: cycle.json  fraud.json  migration.json  professional.json  yoga.json
python-agentic-knowledge-graph/docs/: BEGINNER_DEMO_CHECKLIST.md  BEGINNER_STUDENT_LAB.md  FRAUD_JUPYTER_DEMO.md  TEACHING_GUIDE.md
python-agentic-knowledge-graph/notebooks/: fraud_knowledge_graph_demo.ipynb  fraud_kuzu_tables_relationships_demo.ipynb
python-agentic-knowledge-graph/scripts/: fraud_demo.py
python-agentic-knowledge-graph/src/agentic_knowledge_graph/: __init__.py  agent.py  cli.py  context.py  cycle_detection.py  db.py  domains.py  loader.py  validation.py  visualization.py
python-agentic-knowledge-graph/tests/: test_agent_router.py  test_cycle_detection.py  test_validation.py  test_visualization.py
(+16 files in other folders)
