[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-knowledge-graph-python"
version = "0.1.0"
description = "Python training examples for knowledge graphs, context graphs and GraphRAG with KuzuDB"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sankar Patnaik"}]
dependencies = ["kuzu==0.11.3"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
demo = [
    "ipykernel>=6,<8",
    "ipywidgets>=8,<9",
    "jupyterlab>=4,<5",
]

[project.scripts]
akg = "agentic_knowledge_graph.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
